--- a/bkmonitor/support-files/apigw/resources/external/app/apm.yaml
+++ b/bkmonitor/support-files/apigw/resources/external/app/apm.yaml
@@ -107,10 +107,10 @@ paths:
           userVerifiedRequired: false
           resourcePermissionRequired: true
         descriptionEn: "apply strategies to apm services"
-  /app/apm/list_flatten_traces/:
+  /app/apm/list_web_traces/:
     post:
-      operationId: list_flatten_traces
-      description: 查询扁平化trace列表
+      operationId: list_web_traces
+      description: 查询 trace
       x-bk-apigateway-resource:
         isPublic: true
         allowApplyPermission: true
@@ -118,10 +118,10 @@ paths:
         backend:
           name: default
           method: post
-          path: /api/v4/trace_query_web/list_flatten_traces/
+          path: /api/v4/trace_query_web/list_web_traces/
           matchSubpath: false
         authConfig:
           appVerifiedRequired: true
           userVerifiedRequired: false
           resourcePermissionRequired: true
-        descriptionEn: query flatten trace list
+        descriptionEn: "query web trace list"
