--- a/bklog/web/package.json
+++ b/bklog/web/package.json
@@ -18,7 +18,8 @@
     "analyze": "npm run clean && bkmonitor-cli build -a",
     "lint": "eslint \"**/*.{js,ts,tsx}\" --fix",
     "prettier": "prettier --write ./ '!**/*.{css,scss,less}'",
-    "stylelint": "stylelint \"./src/**/*.(vue|scss|css)\" --fix"
+    "stylelint": "stylelint \"./src/**/*.(vue|scss|css)\" --fix",
+    "biome:format": "biome format --write ./src"
   },
   "dependencies": {
     "@babel/helper-module-imports": "7.24.7",
@@ -100,6 +101,7 @@
     "webpack-sources": "3.2.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.4",
     "@blueking/bkui-lint": "0.0.3",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "12.1.4",
@@ -161,6 +163,7 @@
   },
   "lint-staged": {
     "src/**/*.(js|ts|tsx)": [
+      "biome format --write",
       "eslint --fix"
     ],
     "src/**/*.(vue|scss|css|sass)": [
