--- a/bklog/web/package.json
+++ b/bklog/web/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\" --fix",
     "prettier": "prettier --write ./ '!**/*.{css,scss,less}'",
     "stylelint": "stylelint \"./src/**/*.(vue|scss|css)\" --fix",
-    "biome:format": "biome format --write ./src"
+    "biome:format": "biome format --write ./src",
+    "oxlint": "npx oxlint && npx eslint"
   },
   "dependencies": {
     "@babel/helper-module-imports": "7.24.7",
@@ -115,12 +116,14 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-config-tencent": "1.0.4",
     "eslint-plugin-codecc": "1.0.0-beta.1",
+    "eslint-plugin-oxlint": "^1.11.2",
     "eslint-plugin-perfectionist": "2.10.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "9.26.0",
     "ifdef-loader": "^2.3.2",
     "lint-staged": "15.2.0",
     "nodemon": "3.1.0",
+    "oxlint": "^1.11.2",
     "picocolors": "1.0.0",
     "postcss-html": "1.6.0",
     "postcss-scss": "4.0.9",
@@ -164,6 +167,7 @@
   "lint-staged": {
     "src/**/*.(js|ts|tsx)": [
       "biome format --write",
+      "oxlint",
       "eslint --fix"
     ],
     "src/**/*.(vue|scss|css|sass)": [
