--- a/bklog/web/package.json
+++ b/bklog/web/package.json
@@ -26,6 +26,8 @@
     "@babel/helper-module-imports": "7.24.7",
     "@babel/runtime": "7.26.10",
     "@blueking/ai-blueking": "0.3.29",
+    "@blueking/bk-user-display-name": "1.0.3-beta.5",
+    "@blueking/bk-user-selector": "^0.0.35",
     "@blueking/bkmonitor-cli": "^7.0.1",
     "@blueking/bkui-library": "0.0.0-beta.5",
     "@blueking/date-picker": "^2.0.0-beta.48",
