feat: Metadata: 新增VMRT-VM集群信息变更接口,用于V3链路迁移时自动同步 --story=126922939

--- a/bkmonitor/support-files/apigw/resources/internal/app/metadata.yaml
+++ b/bkmonitor/support-files/apigw/resources/internal/app/metadata.yaml
@@ -1888,7 +1888,7 @@ paths:
           resourcePermissionRequired: true
         descriptionEn: get or create agent event data id
   /app/metadata/modify_cluster_by_vmrts/:
-    get:
+    post:
       operationId: metadata_modify_cluster_by_vmrts
       description: 根据VMRT列表修改VM集群
       tags:
