--- a/bkmonitor/support-files/apigw/resources/internal/app/metadata.yaml
+++ b/bkmonitor/support-files/apigw/resources/internal/app/metadata.yaml
@@ -1899,7 +1899,7 @@ paths:
         matchSubpath: false
         backend:
           name: default
-          method: get
+          method: post
           path: /api/v3/meta/modify_cluster_by_vmrts/
           matchSubpath: false
         authConfig:
