--- a/bklog/web/package.json
+++ b/bklog/web/package.json
@@ -81,6 +81,7 @@
     "sql-formatter": "15.6.6",
     "thread-loader": "4.0.4",
     "throttle-debounce": "5.0.0",
+    "tiny-pinyin": "^1.3.2",
     "tippy.js": "6.3.7",
     "ts-loader": "9.5.1",
     "tslib": "2.8.1",
