--- a/bklog/requirements.txt
+++ b/bklog/requirements.txt
@@ -127,5 +127,8 @@ apigw-manager==3.0.2
 # 日志聚类
 jieba-fast==0.53
 
+# bkaidev
+aidev-agent==1.0.0b31
+
 # 各自环境所需的不同依赖, 通过 sites/${env}/deploy/requirements_env.txt得到
 -r requirements_env.txt
