chore: 调整单测工作流，引入ai_agent模块

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -32,6 +32,8 @@ jobs:
     timeout-minutes: 10
     steps:
     - uses: actions/checkout@v2
+    - name: Create symlink for ai_agent
+      run: ln -s ../ai_agent ./ai_agent
     - name: Setup Python environment
       uses: actions/setup-python@v5
       with:
