--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -43,7 +43,7 @@ jobs:
         source scripts/test_env.sh
         sed -i '/APIGW_ENABLED/d' dev.env.yml
         pip install --upgrade pip setuptools
-        pip install -r requirements.txt
+        pip install -r requirements.txt -i https://mirrors.tencent.com/pypi/simple/ --extra-index-url https://pypi.org/simple/
         pip install coverage
         pip uninstall pycrypto -y
         pip uninstall pycryptodome -y
