--- a/bklog/requirements.txt
+++ b/bklog/requirements.txt
@@ -129,6 +129,7 @@ jieba-fast==0.53
 
 # bkaidev
 aidev-agent==1.0.0b31
+langfuse==2.60.5
 
 # 各自环境所需的不同依赖, 通过 sites/${env}/deploy/requirements_env.txt得到
 -r requirements_env.txt
