Revert "feat: ultracite版本升级 --story=126558017 (#7927)"

--- a/bklog/web/biome.json
+++ b/bklog/web/biome.json
@@ -6,12 +6,7 @@
     "clientKind": "git"
   },
   "files": {
-    "includes": [
-      "./src/**/*.{js,jsx,ts,tsx}",
-      "!*.{js,ts}",
-      "!**/*.{json,vue}",
-      "!webpack"
-    ]
+    "includes": ["./src/**/*.{js,jsx,ts,tsx}"]
   },
   "formatter": {
     "enabled": true,
@@ -38,6 +33,9 @@
       "a11y": {
         "useKeyWithClickEvents": "off",
         "noStaticElementInteractions": "off"
+      },
+      "style": {
+        "useTemplate": "off"
       }
     }
   },
@@ -57,9 +55,7 @@
     "actions": {
       "source": {
         "organizeImports": "off",
-        "useSortedProperties": "off",
-        "useSortedAttributes": "off",
-        "useSortedKeys": "off"
+        "useSortedProperties": "off"
       }
     }
   }
