--- a/bkmonitor/webpack/src/trace/package.json
+++ b/bkmonitor/webpack/src/trace/package.json
@@ -49,6 +49,7 @@
     "fuzzy": "^0.1.3",
     "html-to-image": "^1.11.13",
     "memoize-one": "^5.2.1",
+    "monaco-editor": "0.44.0",
     "monitor-api": "workspace:*",
     "monitor-common": "workspace:*",
     "monitor-pc": "workspace:*",
