feat: 日志管理 - 采集接入重构-新建采集项静态

--- a/bklog/web/biome.json
+++ b/bklog/web/biome.json
@@ -55,7 +55,8 @@
     "actions": {
       "source": {
         "organizeImports": "off",
-        "useSortedProperties": "off"
+        "useSortedProperties": "off",
+        "useSortedAttributes": "off"
       }
     }
   }
