--- a/bklog/prod.env.yml
+++ b/bklog/prod.env.yml
@@ -55,6 +55,30 @@ settings:
       BK_PAAS_HOST: ""
   BK_FAQ_URL: https://bk.tencent.com/s-mart/community/question
   APIGW_ENABLED: true
+  BK_DOC_STATIC_URL: null
+  FEATURE_TOGGLE: null
+  DEFAULT_HTTPS_HOST: null
+  STATIC_URL: null
+  BLUEAPPS_ACCOUNT_LOGIN_URL: null
+  BLUEAPPS_ACCOUNT_LOGIN_PLAIN_URL: null
+  APIGW_PUBLIC_KEY: null
+  BKDATA_APIGW: null
+  PAAS_API_HOST: null
+  PAASV3_API_HOST: null
+  PAAS_API_HOST_IEOD: null
+  BKMONITOR_APIGW: null
+  LOG_SEARCH_APIGW: null
+  NODEMAN_APIGW: null
+  MONITOR_URL: null
+  WEWORK_APIGW: null
+  CELERY_TIMEZONE: null
+  PAASCC_APIGATEWAY: null
+  BCS_WEB_CONSOLE_DOMAIN: null
+  BCS_CC_SSM_SWITCH: null
+  BCS_APIGATEWAY_HOST: null
+  BCS_CC_APIGATEWAY_HOST: null
+  SSM_HOST: null
+  BK_CC_HOST: null
 domains:
   ITSM_APIGATEWAY_ROOT_V2: "{settings.PAAS_API_HOST}/api/c/compapi/v2/itsm/"
   LOG_SEARCH_APIGATEWAY_ROOT: "{settings.PAAS_API_HOST}/api/c/compapi/v2/bk_log/"
@@ -85,3 +109,5 @@ domains:
   DATAFLOW_APIGATEWAY_ROOT: "{settings.PAAS_API_HOST}/api/bk-base/prod/v3/dataflow/"
   RESOURCE_CENTER_APIGATEWAY_ROOT: "{settings.PAAS_API_HOST}/api/c/compapi/data/v3/resourcecenter/"
   UNIFYQUERY_APIGATEWAY_ROOT: "{settings.UNIFYQUERY_APIGATEWAY_ROOT}"
+  PAASCC_APIGATEWAY_ROOT: ""
+  WEWORK_APIGATEWAY_ROOT: ""
