feat: 更新组件版本并添加新文件 -- 更新package.json版本至1.0.3，新增readme.md文件，更新构建配置以包含新文件 # Reviewed, transaction id: 59768

--- a/bkmonitor/webpack/scripts/package.json
+++ b/bkmonitor/webpack/scripts/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@blueking/monitor-vue3-components",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "blueking monitor vue3 components builder",
   "scripts": {},
   "files": [
     "index.mjs",
-    "index.css"
+    "index.css",
+    "readme.md"
+  ],
+  "author": "bkfe",
+  "license": "MIT",
+  "keywords": [
+    "@blueking",
+    "@blueking/monitor-vue3-components"
   ],
   "dependencies": {
     "@blueking/tdesign-ui": "^0.0.1-beta.92",
