feat: 故障SaaS查询组件构建开发 --Story=127630092 # Reviewed, transaction id: 59776

--- a/bkmonitor/webpack/scripts/tsconfig.json
+++ b/bkmonitor/webpack/scripts/tsconfig.json
@@ -6,7 +6,6 @@
     "moduleResolution": "nodeNext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "outDir": "./dist"
+    "sourceMap": true
   }
 }
