feat: 新版告警中心-详情-视图service 开发 --Story=128083467 # Reviewed, transaction id: 61333

--- a/bkmonitor/webpack/pnpm-workspace.yaml
+++ b/bkmonitor/webpack/pnpm-workspace.yaml
@@ -26,7 +26,7 @@ overrides:
 recursiveInstall: true
 
 publicHoistPattern:
-  - '!vue'
+  - '!vue@'
   - '!vue-template-compiler'
   - '!vue-i18n'
   - '!@vue/compiler-sfc'
